i18n // Patch zh-Hans typos.

--- a/Packages/EnkaKit/Sources/EnkaKit/Resources/Localizable.xcstrings
+++ b/Packages/EnkaKit/Sources/EnkaKit/Resources/Localizable.xcstrings
@@ -3448,7 +3448,7 @@
         "zh-Hans" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "这些替代名称并未得到米哈遊的背书。此选项默认关闭。"
+            "value" : "这些替代名称并未得到米哈游的背书。此选项默认关闭。"
           }
         },
         "zh-Hant" : {
