i18n // Fix Japanese translations in AboutKit.

--- a/Packages/PZHelper/Sources/PZHelper/Resources/Localizable.xcstrings
+++ b/Packages/PZHelper/Sources/PZHelper/Resources/Localizable.xcstrings
@@ -8734,7 +8734,7 @@
         "ja" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Lava（*PizzaHelper4Genshin* v1.x～v4.x および *PizzaHelper4HSR* v1.x のオリジナルリード開発者）の個人的な懸念により、本アプリは彼の Apple Developer アカウント下でリリースされている限り、定期的なアップデートを行うことが不便な状況となりました。また、macOS 版が Sandbox Group Containers（自前のデスクトップウィジェットとデータを共有するため）を使用しているため、現在の Bundle ID は別の Apple Developer アカウントへの移行ができない可能性があります。\n\nその結果、この Bundle ID 下のアプリの全機能はメンテナンス外と見なされるべきです。残された唯一の機能は以下の通りです：1) ウィジェットと通知、そのまま提供されます；2) ローカルプロファイルとガチャ記録のエクスポート機能（現在のフォーマットと旧 PizzaHelper4Genshin v4.x フォーマットの両方に対応）。これらはエクスポートされた移行ファイルに含まれます。\n\n本アプリの後継は App Store で新名称 ***The Latte Helper (拿鐵小助手 / ラテ助手)*** としてリリースされます。チームの別メンバーの Apple Developer アカウントで運用されます。新名称は、姫子が有名な洗剤事件でミルクパウダーの代わりに洗濯洗剤をラテに入れてしまったことへのオマージュです。"
+            "value" : "Lava（*PizzaHelper4Genshin* v1.x～v4.x および *PizzaHelper4HSR* v1.x のオリジナルリード開発者）の個人的な懸念により、本アプリは彼の Apple Developer アカウント下でリリースされている限り、定期的なアップデートを行うことが不便な状況となりました。また、macOS 版が Sandbox Group Containers（自前のデスクトップウィジェットとデータを共有するため）を使用しているため、現在の Bundle ID は別の Apple Developer アカウントへの移行手続きが不可能だと判断しました。\n\nその結果、この Bundle ID 下のアプリの全機能はメンテナンス外と見なされるべきです。残された唯一の機能は以下の通りです：1) ウィジェットと通知、そのまま提供されます；2) ローカルプロファイルとガチャ記録のエクスポート機能（現在のフォーマットと旧 PizzaHelper4Genshin v4.x フォーマットの両方に対応）。これらはエクスポートされた移行ファイルに含まれます。\n\n本アプリの後継は App Store で新名称 ***The Latte Helper (拿鐵小助手 / ラテ助手)*** としてリリースされます。チームの別メンバーの Apple Developer アカウントで提供されております。新名称は、姫子が有名な洗剤事件でミルクパウダーの代わりに洗濯洗剤をラテに入れてしまったことへのオマージュです。"
           }
         },
         "ko" : {
